include $(top_srcdir)/glib.mk

installed_m4= glib-2.0.m4 glib-gettext.m4 gsettings.m4

EXTRA_DIST += \
	$(installed_m4) \
	gettext.m4	\
	iconv.m4	\
	lib-ld.m4	\
	lib-link.m4	\
	lib-prefix.m4	\
	nls.m4		\
	po.m4		\
	progtest.m4

m4datadir = $(datadir)/aclocal
m4data_DATA = $(installed_m4)

EXTRA_DIST = gettext.m4 iconv.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 nls.m4 po.m4 progtest.m4
