i18n = import('i18n')

i18n_langs = [
  'af',
  'am',
  'an',
  'ar',
  'as',
  'ast',
  'az',
  'be',
  'be@latin',
  'bg',
  'bn',
  'bn_IN',
  'bs',
  'ca',
  'ca@valencia',
  'cs',
  'cy',
  'da',
  'de',
  'dz',
  'el',
  'en_CA',
  'en_GB',
  'en@shaw',
  'eo',
  'es',
  'et',
  'eu',
  'fa',
  'fi',
  'fr',
  'ga',
  'gd',
  'gl',
  'gu',
  'he',
  'hi',
  'hr',
  'hu',
  'hy',
  'id',
  'is',
  'it',
  'ja',
  'ka',
  'kk',
  'kn',
  'ko',
  'ku',
  'lt',
  'lv',
  'mai',
  'mg',
  'mk',
  'ml',
  'mn',
  'mr',
  'ms',
  'nb',
  'nds',
  'ne',
  'nl',
  'nn',
  'oc',
  'or',
  'pa',
  'pl',
  'ps',
  'pt',
  'pt_BR',
  'ro',
  'ru',
  'rw',
  'si',
  'sk',
  'sl',
  'sq',
  'sr',
  'sr@latin',
  'sr@ije',
  'sv',
  'ta',
  'te',
  'tg',
  'th',
  'tl',
  'tr',
  'tt',
  'ug',
  'uk',
  'vi',
  'wa',
  'xh',
  'yi',
  'zh_CN',
  'zh_HK',
  'zh_TW'
]

i18n.gettext('glib20',
  languages : i18n_langs,
  args : [
    '--from-code=UTF-8',
    '--add-comments',

    '--keyword=_',
    '--keyword=N_',
    '--keyword=C_:1c,2',
    '--keyword=NC_:1c,2',
    '--keyword=g_dcgettext:2',
    '--keyword=g_dngettext:2,3',
    '--keyword=g_dpgettext2:2c,3',

    '--flag=N_:1:pass-c-format',
    '--flag=C_:2:pass-c-format',
    '--flag=NC_:2:pass-c-format',
    '--flag=g_dngettext:2:pass-c-format',
    '--flag=g_strdup_printf:1:c-format',
    '--flag=g_string_printf:2:c-format',
    '--flag=g_string_append_printf:2:c-format',
    '--flag=g_error_new:3:c-format',
    '--flag=g_set_error:4:c-format',
  ]
)

install_data('Makefile.in.in', install_dir : glib_pkgdatadir + '/gettext/po')
